@@ -1,0 +1,50 @@
+element-id	element-type	RPKM sample NYUKGXG-diffsmall4(AC)	RPKM sample POISFWS-diffsmall2(AC)	RPKM sample OAMADRF-diffsmall3(AC)	RPKM sample KJUOQSP-diffsmall1(AC)	log2_RPKM sample NYUKGXG-diffsmall4(AC)	log2_RPKM sample POISFWS-diffsmall2(AC)	log2_RPKM sample OAMADRF-diffsmall3(AC)	log2_RPKM sample KJUOQSP-diffsmall1(AC)	count sample NYUKGXG-diffsmall4	count sample POISFWS-diffsmall2	count sample OAMADRF-diffsmall3	count sample KJUOQSP-diffsmall1	fold-change Group_1/Group_2(AC)	fold-change-magnitude(AC)	log2-fold-change Group_1/Group_2(AC)	average RPKM group Group_1(AC)	average RPKM group Group_2(AC)	average log2_RPKM group Group_1(AC)	average log2_RPKM group Group_2(AC)	average count group Group_1	average count group Group_2	t-test(AC)	t-statistic(AC)	fisher-exact-R Group_1/Group_2(AC)	t-test(AC)-BH-FDR-q-value	fisher-exact-R Group_1/Group_2(AC)-BH-FDR-q-value	RPKM sample NYUKGXG-diffsmall4(BUQ)	RPKM sample POISFWS-diffsmall2(BUQ)	RPKM sample OAMADRF-diffsmall3(BUQ)	RPKM sample KJUOQSP-diffsmall1(BUQ)	log2_RPKM sample NYUKGXG-diffsmall4(BUQ)	log2_RPKM sample POISFWS-diffsmall2(BUQ)	log2_RPKM sample OAMADRF-diffsmall3(BUQ)	log2_RPKM sample KJUOQSP-diffsmall1(BUQ)	fold-change Group_1/Group_2(BUQ)	fold-change-magnitude(BUQ)	log2-fold-change Group_1/Group_2(BUQ)	average RPKM group Group_1(BUQ)	average RPKM group Group_2(BUQ)	average log2_RPKM group Group_1(BUQ)	average log2_RPKM group Group_2(BUQ)	t-test(BUQ)	t-statistic(BUQ)	fisher-exact-R Group_1/Group_2(BUQ)	t-test(BUQ)-BH-FDR-q-value	fisher-exact-R Group_1/Group_2(BUQ)-BH-FDR-q-value
+ENSG00000198886	GENE	49199.3	49199.3	49199.3	49199.3	15.5863	15.5863	15.5863	15.5863	3.00000	3.00000	3.00000	3.00000	1.00000	1.00000	0.00000	49199.3	49199.3	15.5863	15.5863	3.00000	3.00000	NaN	NaN	1.00000	1.00000	1.00000	52777.4	52777.4	52777.4	52777.4	15.6876	15.6876	15.6876	15.6876	1.00000	1.00000	0.00000	52777.4	52777.4	15.6876	15.6876	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000072071	GENE	2165.61	2165.61	2165.61	2165.61	11.0806	11.0806	11.0806	11.0806	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2165.61	2165.61	11.0806	11.0806	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2323.11	2323.11	2323.11	2323.11	11.1818	11.1818	11.1818	11.1818	1.00000	1.00000	0.00000	2323.11	2323.11	11.1818	11.1818	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000112877	GENE	5073.84	5073.84	5073.84	5073.84	12.3089	12.3089	12.3089	12.3089	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	5073.84	5073.84	12.3089	12.3089	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	5442.84	5442.84	5442.84	5442.84	12.4101	12.4101	12.4101	12.4101	1.00000	1.00000	0.00000	5442.84	5442.84	12.4101	12.4101	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000067715	GENE	2605.76	2605.76	2605.76	2605.76	11.3475	11.3475	11.3475	11.3475	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2605.76	2605.76	11.3475	11.3475	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2795.27	2795.27	2795.27	2795.27	11.4488	11.4488	11.4488	11.4488	1.00000	1.00000	0.00000	2795.27	2795.27	11.4488	11.4488	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000135709	GENE	3790.48	3790.48	3790.48	3790.48	11.8882	11.8882	11.8882	11.8882	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	3790.48	3790.48	11.8882	11.8882	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	4066.16	4066.16	4066.16	4066.16	11.9894	11.9894	11.9894	11.9894	1.00000	1.00000	0.00000	4066.16	4066.16	11.9894	11.9894	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000115307	GENE	2675.90	2675.90	2675.90	2675.90	11.3858	11.3858	11.3858	11.3858	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2675.90	2675.90	11.3858	11.3858	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2870.51	2870.51	2870.51	2870.51	11.4871	11.4871	11.4871	11.4871	1.00000	1.00000	0.00000	2870.51	2870.51	11.4871	11.4871	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000165323	GENE	484.933	484.933	484.933	484.933	8.92164	8.92164	8.92164	8.92164	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	484.933	484.933	8.92164	8.92164	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	520.201	520.201	520.201	520.201	9.02293	9.02293	9.02293	9.02293	1.00000	1.00000	0.00000	520.201	520.201	9.02293	9.02293	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000145494	GENE	17916.7	17916.7	17916.7	17916.7	14.1290	14.1290	14.1290	14.1290	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	17916.7	17916.7	14.1290	14.1290	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	19219.7	19219.7	19219.7	19219.7	14.2303	14.2303	14.2303	14.2303	1.00000	1.00000	0.00000	19219.7	19219.7	14.2303	14.2303	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000174306	GENE	660.374	660.374	660.374	660.374	9.36714	9.36714	9.36714	9.36714	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	660.374	660.374	9.36714	9.36714	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	708.401	708.401	708.401	708.401	9.46842	9.46842	9.46842	9.46842	1.00000	1.00000	0.00000	708.401	708.401	9.46842	9.46842	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000123560	GENE	2235.45	2235.45	2235.45	2235.45	11.1263	11.1263	11.1263	11.1263	2.00000	2.00000	2.00000	2.00000	1.00000	1.00000	0.00000	2235.45	2235.45	11.1263	11.1263	2.00000	2.00000	NaN	NaN	1.00000	1.00000	1.00000	2398.02	2398.02	2398.02	2398.02	11.2276	11.2276	11.2276	11.2276	1.00000	1.00000	0.00000	2398.02	2398.02	11.2276	11.2276	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000198786	GENE	18707.7	18707.7	18707.7	18707.7	14.1913	14.1913	14.1913	14.1913	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	18707.7	18707.7	14.1913	14.1913	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	20068.2	20068.2	20068.2	20068.2	14.2926	14.2926	14.2926	14.2926	1.00000	1.00000	0.00000	20068.2	20068.2	14.2926	14.2926	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000210082	GENE	32615.4	32615.4	32615.4	32615.4	14.9933	14.9933	14.9933	14.9933	2.00000	2.00000	2.00000	2.00000	1.00000	1.00000	0.00000	32615.4	32615.4	14.9933	14.9933	2.00000	2.00000	NaN	NaN	1.00000	1.00000	1.00000	34987.5	34987.5	34987.5	34987.5	15.0946	15.0946	15.0946	15.0946	1.00000	1.00000	0.00000	34987.5	34987.5	15.0946	15.0946	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000102931	GENE	15914.7	15914.7	15914.7	15914.7	13.9581	13.9581	13.9581	13.9581	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	15914.7	15914.7	13.9581	13.9581	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	17072.1	17072.1	17072.1	17072.1	14.0594	14.0594	14.0594	14.0594	1.00000	1.00000	0.00000	17072.1	17072.1	14.0594	14.0594	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000178723	GENE	30374.8	30374.8	30374.8	30374.8	14.8906	14.8906	14.8906	14.8906	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	30374.8	30374.8	14.8906	14.8906	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	32583.9	32583.9	32583.9	32583.9	14.9919	14.9919	14.9919	14.9919	1.00000	1.00000	0.00000	32583.9	32583.9	14.9919	14.9919	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000179195	GENE	1231.64	1231.64	1231.64	1231.64	10.2664	10.2664	10.2664	10.2664	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1231.64	1231.64	10.2664	10.2664	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	1321.21	1321.21	1321.21	1321.21	10.3676	10.3676	10.3676	10.3676	1.00000	1.00000	0.00000	1321.21	1321.21	10.3676	10.3676	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000068383	GENE	1933.51	1933.51	1933.51	1933.51	10.9170	10.9170	10.9170	10.9170	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1933.51	1933.51	10.9170	10.9170	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2074.13	2074.13	2074.13	2074.13	11.0183	11.0183	11.0183	11.0183	1.00000	1.00000	0.00000	2074.13	2074.13	11.0183	11.0183	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000101265	GENE	1585.37	1585.37	1585.37	1585.37	10.6306	10.6306	10.6306	10.6306	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1585.37	1585.37	10.6306	10.6306	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	1700.67	1700.67	1700.67	1700.67	10.7319	10.7319	10.7319	10.7319	1.00000	1.00000	0.00000	1700.67	1700.67	10.7319	10.7319	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000198763	GENE	32532.0	32532.0	32532.0	32532.0	14.9896	14.9896	14.9896	14.9896	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	32532.0	32532.0	14.9896	14.9896	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	34897.9	34897.9	34897.9	34897.9	15.0909	15.0909	15.0909	15.0909	1.00000	1.00000	0.00000	34897.9	34897.9	15.0909	15.0909	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000179262	GENE	10809.4	10809.4	10809.4	10809.4	13.4000	13.4000	13.4000	13.4000	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	10809.4	10809.4	13.4000	13.4000	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	11595.5	11595.5	11595.5	11595.5	13.5013	13.5013	13.5013	13.5013	1.00000	1.00000	0.00000	11595.5	11595.5	13.5013	13.5013	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000155980	GENE	3625.10	3625.10	3625.10	3625.10	11.8238	11.8238	11.8238	11.8238	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	3625.10	3625.10	11.8238	11.8238	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	3888.74	3888.74	3888.74	3888.74	11.9251	11.9251	11.9251	11.9251	1.00000	1.00000	0.00000	3888.74	3888.74	11.9251	11.9251	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000221932	GENE	23639.0	23639.0	23639.0	23639.0	14.5289	14.5289	14.5289	14.5289	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	23639.0	23639.0	14.5289	14.5289	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	25358.2	25358.2	25358.2	25358.2	14.6302	14.6302	14.6302	14.6302	1.00000	1.00000	0.00000	25358.2	25358.2	14.6302	14.6302	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000110931	GENE	726.979	726.979	726.979	726.979	9.50577	9.50577	9.50577	9.50577	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	726.979	726.979	9.50577	9.50577	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	779.850	779.850	779.850	779.850	9.60705	9.60705	9.60705	9.60705	1.00000	1.00000	0.00000	779.850	779.850	9.60705	9.60705	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000178814	GENE	3694.24	3694.24	3694.24	3694.24	11.8511	11.8511	11.8511	11.8511	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	3694.24	3694.24	11.8511	11.8511	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	3962.91	3962.91	3962.91	3962.91	11.9523	11.9523	11.9523	11.9523	1.00000	1.00000	0.00000	3962.91	3962.91	11.9523	11.9523	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000239776	GENE	63361.3	63361.3	63361.3	63361.3	15.9513	15.9513	15.9513	15.9513	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	63361.3	63361.3	15.9513	15.9513	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	67969.4	67969.4	67969.4	67969.4	16.0526	16.0526	16.0526	16.0526	1.00000	1.00000	0.00000	67969.4	67969.4	16.0526	16.0526	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000248045	GENE	11869.2	11869.2	11869.2	11869.2	13.5349	13.5349	13.5349	13.5349	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	11869.2	11869.2	13.5349	13.5349	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	12732.4	12732.4	12732.4	12732.4	13.6362	13.6362	13.6362	13.6362	1.00000	1.00000	0.00000	12732.4	12732.4	13.6362	13.6362	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000137955	GENE	1741.50	1741.50	1741.50	1741.50	10.7661	10.7661	10.7661	10.7661	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1741.50	1741.50	10.7661	10.7661	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	1868.15	1868.15	1868.15	1868.15	10.8674	10.8674	10.8674	10.8674	1.00000	1.00000	0.00000	1868.15	1868.15	10.8674	10.8674	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000084774	GENE	1671.84	1671.84	1671.84	1671.84	10.7072	10.7072	10.7072	10.7072	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1671.84	1671.84	10.7072	10.7072	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	1793.43	1793.43	1793.43	1793.43	10.8085	10.8085	10.8085	10.8085	1.00000	1.00000	0.00000	1793.43	1793.43	10.8085	10.8085	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000168385	GENE	740.510	740.510	740.510	740.510	9.53237	9.53237	9.53237	9.53237	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	740.510	740.510	9.53237	9.53237	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	794.365	794.365	794.365	794.365	9.63366	9.63366	9.63366	9.63366	1.00000	1.00000	0.00000	794.365	794.365	9.63366	9.63366	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000105701	GENE	7175.76	7175.76	7175.76	7175.76	12.8089	12.8089	12.8089	12.8089	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	7175.76	7175.76	12.8089	12.8089	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	7697.64	7697.64	7697.64	7697.64	12.9102	12.9102	12.9102	12.9102	1.00000	1.00000	0.00000	7697.64	7697.64	12.9102	12.9102	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000105663	GENE	1826.32	1826.32	1826.32	1826.32	10.8347	10.8347	10.8347	10.8347	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1826.32	1826.32	10.8347	10.8347	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	1959.14	1959.14	1959.14	1959.14	10.9360	10.9360	10.9360	10.9360	1.00000	1.00000	0.00000	1959.14	1959.14	10.9360	10.9360	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000152078	GENE	3864.38	3864.38	3864.38	3864.38	11.9160	11.9160	11.9160	11.9160	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	3864.38	3864.38	11.9160	11.9160	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	4145.42	4145.42	4145.42	4145.42	12.0173	12.0173	12.0173	12.0173	1.00000	1.00000	0.00000	4145.42	4145.42	12.0173	12.0173	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000166165	GENE	12331.1	12331.1	12331.1	12331.1	13.5900	13.5900	13.5900	13.5900	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	12331.1	12331.1	13.5900	13.5900	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	13228.0	13228.0	13228.0	13228.0	13.6913	13.6913	13.6913	13.6913	1.00000	1.00000	0.00000	13228.0	13228.0	13.6913	13.6913	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000248923	GENE	18707.7	18707.7	18707.7	18707.7	14.1913	14.1913	14.1913	14.1913	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	18707.7	18707.7	14.1913	14.1913	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	20068.2	20068.2	20068.2	20068.2	14.2926	14.2926	14.2926	14.2926	1.00000	1.00000	0.00000	20068.2	20068.2	14.2926	14.2926	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000198840	GENE	97972.0	97972.0	97972.0	97972.0	16.5801	16.5801	16.5801	16.5801	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	97972.0	97972.0	16.5801	16.5801	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	105097	105097	105097	105097	16.6814	16.6814	16.6814	16.6814	1.00000	1.00000	0.00000	105097	105097	16.6814	16.6814	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000131845	GENE	2796.66	2796.66	2796.66	2796.66	11.4495	11.4495	11.4495	11.4495	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2796.66	2796.66	11.4495	11.4495	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	3000.05	3000.05	3000.05	3000.05	11.5508	11.5508	11.5508	11.5508	1.00000	1.00000	0.00000	3000.05	3000.05	11.5508	11.5508	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000100299	GENE	3630.53	3630.53	3630.53	3630.53	11.8260	11.8260	11.8260	11.8260	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	3630.53	3630.53	11.8260	11.8260	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	3894.57	3894.57	3894.57	3894.57	11.9272	11.9272	11.9272	11.9272	1.00000	1.00000	0.00000	3894.57	3894.57	11.9272	11.9272	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000198695	GENE	64568.2	64568.2	64568.2	64568.2	15.9785	15.9785	15.9785	15.9785	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	64568.2	64568.2	15.9785	15.9785	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	69264.1	69264.1	69264.1	69264.1	16.0798	16.0798	16.0798	16.0798	1.00000	1.00000	0.00000	69264.1	69264.1	16.0798	16.0798	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000075426	GENE	2290.12	2290.12	2290.12	2290.12	11.1612	11.1612	11.1612	11.1612	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2290.12	2290.12	11.1612	11.1612	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2456.67	2456.67	2456.67	2456.67	11.2625	11.2625	11.2625	11.2625	1.00000	1.00000	0.00000	2456.67	2456.67	11.2625	11.2625	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000198804	GENE	32975.0	32975.0	32975.0	32975.0	15.0091	15.0091	15.0091	15.0091	2.00000	2.00000	2.00000	2.00000	1.00000	1.00000	0.00000	32975.0	32975.0	15.0091	15.0091	2.00000	2.00000	NaN	NaN	1.00000	1.00000	1.00000	35373.2	35373.2	35373.2	35373.2	15.1104	15.1104	15.1104	15.1104	1.00000	1.00000	0.00000	35373.2	35373.2	15.1104	15.1104	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000163625	GENE	850.263	850.263	850.263	850.263	9.73177	9.73177	9.73177	9.73177	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	850.263	850.263	9.73177	9.73177	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	912.101	912.101	912.101	912.101	9.83305	9.83305	9.83305	9.83305	1.00000	1.00000	0.00000	912.101	912.101	9.83305	9.83305	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000010322	GENE	1046.15	1046.15	1046.15	1046.15	10.0309	10.0309	10.0309	10.0309	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1046.15	1046.15	10.0309	10.0309	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	1122.23	1122.23	1122.23	1122.23	10.1322	10.1322	10.1322	10.1322	1.00000	1.00000	0.00000	1122.23	1122.23	10.1322	10.1322	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000198938	GENE	43237.6	43237.6	43237.6	43237.6	15.4000	15.4000	15.4000	15.4000	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	43237.6	43237.6	15.4000	15.4000	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	46382.2	46382.2	46382.2	46382.2	15.5013	15.5013	15.5013	15.5013	1.00000	1.00000	0.00000	46382.2	46382.2	15.5013	15.5013	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000204394	GENE	1902.16	1902.16	1902.16	1902.16	10.8934	10.8934	10.8934	10.8934	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	1902.16	1902.16	10.8934	10.8934	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2040.49	2040.49	2040.49	2040.49	10.9947	10.9947	10.9947	10.9947	1.00000	1.00000	0.00000	2040.49	2040.49	10.9947	10.9947	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000175115	GENE	2082.59	2082.59	2082.59	2082.59	11.0242	11.0242	11.0242	11.0242	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2082.59	2082.59	11.0242	11.0242	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2234.05	2234.05	2234.05	2234.05	11.1254	11.1254	11.1254	11.1254	1.00000	1.00000	0.00000	2234.05	2234.05	11.1254	11.1254	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000016391	GENE	7009.58	7009.58	7009.58	7009.58	12.7751	12.7751	12.7751	12.7751	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	7009.58	7009.58	12.7751	12.7751	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	7519.36	7519.36	7519.36	7519.36	12.8764	12.8764	12.8764	12.8764	1.00000	1.00000	0.00000	7519.36	7519.36	12.8764	12.8764	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000171368	GENE	6625.94	6625.94	6625.94	6625.94	12.6939	12.6939	12.6939	12.6939	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	6625.94	6625.94	12.6939	12.6939	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	7107.83	7107.83	7107.83	7107.83	12.7952	12.7952	12.7952	12.7952	1.00000	1.00000	0.00000	7107.83	7107.83	12.7952	12.7952	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000158747	GENE	5355.18	5355.18	5355.18	5355.18	12.3867	12.3867	12.3867	12.3867	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	5355.18	5355.18	12.3867	12.3867	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	5744.65	5744.65	5744.65	5744.65	12.4880	12.4880	12.4880	12.4880	1.00000	1.00000	0.00000	5744.65	5744.65	12.4880	12.4880	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000165478	GENE	7642.79	7642.79	7642.79	7642.79	12.8999	12.8999	12.8999	12.8999	2.00000	2.00000	2.00000	2.00000	1.00000	1.00000	0.00000	7642.79	7642.79	12.8999	12.8999	2.00000	2.00000	NaN	NaN	1.00000	1.00000	1.00000	8198.63	8198.63	8198.63	8198.63	13.0012	13.0012	13.0012	13.0012	1.00000	1.00000	0.00000	8198.63	8198.63	13.0012	13.0012	NaN	NaN	1.00000	1.00000	1.00000
+ENSG00000172350	GENE	2505.79	2505.79	2505.79	2505.79	11.2910	11.2910	11.2910	11.2910	1.00000	1.00000	1.00000	1.00000	1.00000	1.00000	0.00000	2505.79	2505.79	11.2910	11.2910	1.00000	1.00000	NaN	NaN	1.00000	1.00000	1.00000	2688.03	2688.03	2688.03	2688.03	11.3923	11.3923	11.3923	11.3923	1.00000	1.00000	0.00000	2688.03	2688.03	11.3923	11.3923	NaN	NaN	1.00000	1.00000	1.00000
